--- a/x10.lib/AUTHORS
+++ b/x10.lib/AUTHORS
@@ -2,7 +2,7 @@
 
                     X10Lib : The X10 Runtime System
 
-                              Version 0.5
+                              Version 0.6
 
 
                              A U T H O R S
@@ -14,10 +14,10 @@ List of authors (in alphabetical order) who are involved in this effort:
 
   * Igor Peshansky <igorp@us.ibm.com>
 
-  * Rajkishore Barik <rajbarik@in.ibm.com>
-
   * Sreedhar B Kodali <srkodali@in.ibm.com>
 
   * Sriram Krishnamoorthy <krishnsr@cse.ohio-state.edu>
+
+  * Sayantan Sur <surs@us.ibm.com>
 
   * Vijay Saraswat <vsaraswa@us.ibm.com>, <vijay@saraswat.org>
