--- a/x10.man/paper/abstract.tex
+++ b/x10.man/paper/abstract.tex
@@ -11,7 +11,7 @@ documenting design decisions, eliminating costly runtime checks
 generated code.
 
 We present a simple, general framework for adding constraint-based
-dependent types to nominally typed OO languages such as Java, \Xten{}
+dependent types to nominally typed OO languages such as Java, \Xten{},
 and Scala. The framework is parametric on an underlying constraint
 system {\cal C}. Classes and interfaces are associated with {\em
 properties} (= final instance fields). A type {\tt C(:c)} names a class
@@ -24,9 +24,9 @@ class invariants) and with method and constructor definitions
 We present many examples to illustrate that many common OO idioms and
 OO type systems proposed recently can be naturally captured by
 constrained types: specifically we discuss types for places, aliases,
-ownership, arrays and clocks. We have implemented the type system (for
-a simple equality-based constraint system) in \Xten{} 1.0 (available
-at {\tt x10.sf.net}). We present a simple \FJ{} extension,
+ownership, arrays and clocks. We have implemented the type system
+in \Xten{} and instantiated the framework with multiple constraint systems.
+We present a simple \FJ{} extension,
 Constrained FJ, and establish fundamental properties such as type
 soundness. We compare this approach with relevant work in dependent
 types, specifically, DML, and outline many areas of future work.
