--- a/trunk/x10.man/paper/master.bib
+++ b/trunk/x10.man/paper/master.bib
@@ -34,11 +34,11 @@ booktitle="Proceedings of CONCUR",
 year = {2005}
 }
 
-@inproceedings{FJ
-,title="Featherweight Java: A minimal core calculus for Java and GJ"
-,author="A. Igarashi and B. Pierce and P. Wadler" 
-,booktitle="ACM Symposium on Object-Oriented Programming: Systems, Languages and Applications"
-,year={1999}
+@inproceedings{FJ,
+  title="Featherweight {Java}: A minimal core calculus for {Java} and {GJ}",
+author="A. Igarashi and B. Pierce and P. Wadler",
+booktitle="ACM Symposium on Object-Oriented Programming: Systems, Languages and Applications",
+year={1999}
 }
 
 @TECHREPORT{multijava,
@@ -128,7 +128,7 @@ year = {2005}
 
 @misc{ concert,
   author = "A. Chien and J. Dolby and B. Ganguly and V. Karamecheti and X. Zhang",
-  title = "High Level Parallel Programming: the Illinois Concert System",
+  title = "High Level Parallel Programming: the {Illinois} Concert System",
   text = "A.A. Chien, J. Dolby, B. Ganguly, V. Karamecheti, and X. Zhang, High Level
     Parallel Programming: the Illinois Concert System, Submitted for publication,
     1998.",
@@ -253,7 +253,7 @@ year = {2005}
 }
 
 @techreport{cmm
- ,title={Concurrent {C}onstraint-based {M}emory {M}achines: A framework for \java{} {M}emory {M}odels}
+ ,title={Concurrent Constraint-based Memory Machines: A framework for {Java} Memory Models}
  ,author={Vijay Saraswat}
  ,institution="IBM T.J.Watson Research Center"
  ,month="March"
@@ -417,7 +417,7 @@ year = {2005}
 }
 @techreport{xml
 ,author={Tim Bray and Jean Paolo and C.M.~Sperberg=McQueen and Eve Maler}
- ,title={{E}xtensible {M}arkup {L}anguage (XML) 1.0 (Second Edition)}
+ ,title={{E}xtensible {M}arkup {L}anguage ({XML}) 1.0 (Second Edition)}
  ,institution="W3C"
  ,year=" 2000"
  ,note="{\tt http://www.w3.org/TR/REC-xml}"
@@ -453,7 +453,7 @@ year = {2005}
 }
 
 @book{lea-concurrency,
- title={Concurrent Programming in Java, Second Edition: Design Principles and Patterns},
+ title={Concurrent Programming in {Java}, Second Edition: Design Principles and Patterns},
  author={Doug Lea},
  publisher={Addison Wesley Series in Java},
  year={2000}
@@ -508,7 +508,7 @@ pages={459--470}
 
 
 @misc{jml-overview,
-title = {{An overview of JML tools and applications}},
+title = {{An overview of {JML} tools and applications}},
 author = {Lilian Burdy and Yoonsik Cheon and David Cok and Michael Ernst and Joe Kiniry and Gary Leavens and K Rustan and M Leino and Erik Poll},
 note = {To appear in Electronic Notes in Theoretical Computer Science}
 }
@@ -535,7 +535,7 @@ note = {To appear in Electronic Notes in Theoretical Computer Science}
 
 @techreport{ reflex-esterel
 ,author={Raphael Bernhard and Gerard Berry and Frederic Boussinot and Georges Gonthier and Annie Ressouche and Jean-Paul Rigault and Jean-Marc Tanzi}
- ,title={{Programming a Reflex Game in Esterel v3}}
+ ,title={{Programming a Reflex Game in {Esterel} v3}}
  ,institution="INRIA"
  ,year=" 1989"
   ,month="May"
@@ -807,7 +807,7 @@ note = {To appear in Electronic Notes in Theoretical Computer Science}
 
 @InProceedings{eros,
   author =       {J.~Shapiro and J.~Smith and D.~Farber},
-  title =        "{EROS: A fast capability system}",
+  title =        "{{EROS}: A fast capability system}",
   booktitle =    "Proceedings of the 17th ACM Symposium on Operating Systems Principles",
   month = {December},
   year =         {1999},
@@ -816,7 +816,7 @@ note = {To appear in Electronic Notes in Theoretical Computer Science}
 
 @InProceedings{keykos,
   author =       "Key Logic Inc",
-  title =        "{KeyKOS -- A Secure, High-Performance Environment for S/370}",
+  title =        "{{KeyKOS} -- A Secure, High-Performance Environment for {S/370}}",
   booktitle =    "Proceedings of SHARE 52 I",
   month = {March},
   year =         {1988},
@@ -845,7 +845,7 @@ note = {To appear in Electronic Notes in Theoretical Computer Science}
 }
 
 @article{safkasi,
-  title =       "SAFKASI: A security mechanism for language-based systems",
+  title =       "{SAFKASI}: A security mechanism for language-based systems",
   author =        "D.~Wallach and A.~Appel and E.~Felten",
   journal =    "ACM Transactions on Software Engineering and Methodology",
   volume = 9,
@@ -2469,7 +2469,7 @@ year = 1993
 
 @techreport{ns07-x10anno,
     author = "Nathaniel Nystrom and Vijay Saraswat",
-    title = {An annotation and copmiler plugin system for {X}10},
+    title = {An annotation and compiler plugin system for {X}10},
     institution = {IBM T.J. Watson Research Center},
     number = "RC24198",
     year = 2007
